Fri Nov  8 09:55:40 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in (install): Use $(INSTALL_PROGRAM) for installing
	shared library.

Thu Nov  7 12:43:17 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in: Add -lm when building shared library.

	* Version 1.91.

Mon Nov  4 10:09:00 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* lapack/dlag2.f, lapack/dggbal.f, lapack/dgghrd.f, lapack/dhgeqz.f:
	New files.

	* Makefile.in (install): Use INSTALL_PROGRAM for shared version of
	libcruft.	

Sun Nov  3 19:37:37 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* misc/Makefile.in (distclean): Delete target, since there is
	nothing special to do.

Wed Oct 30 17:20:14 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Version 1.90.

	* Makefile.in (DISTFILES): Add ChangeLog.

	* misc/Makefile.in: Make pic/machar.o using special rule.
	Use CPPFLAGS, not CPP_FLAGS.

Thu Oct 24 20:22:47 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in (CRUFT_OBJ): No special treatment for d1mach.o.

	* misc/machar.c, misc/d1mach.f: New files
	* misc/Makefile.in: Fix to not generate d1mach.f.

Mon Oct 14 11:07:25 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in (distclean): Remove stamp-shared too.

Sat Oct 12 00:20:41 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in (maintainer-clean): Don't depend on distclean.
	* Makerules.in (maintainer-clean): Ditto.

Tue Aug 20 22:09:08 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makerules.in (stamp-picdir): Only create a pic subdirectory if
	SHARED_LIBS is true AND FPICFLAG is not empty.

Wed May 22 15:07:00 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in (stamp-shared): Use CC, not CXX to create shared
	library.  Also use SHARED_FLIBS here instead of FLIBS.

Sat Apr  6 21:28:47 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makerules.in (clean, mostlyclean): Also remove pic/*.o.
	(maintainer-clean, distclean): Also remove stamp-picdir and pic
	directory.
